compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_branches_guards_are_wrapped_in_parentheses.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn anything() -> a {\n  case [] {\n    [a] if False || True -> a\n    _ -> anything()\n  }\n}\n"
---
----- SOURCE CODE

pub fn anything() -> a {
  case [] {
    [a] if False || True -> a
    _ -> anything()
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty, List$Empty$const as $List$Empty$const } from "../gleam.mjs";

export function anything() {
  while (true) {
    let $ = $List$Empty$const;
    if (!($ instanceof $Empty)) {
      let $1 = $.tail;
      if ($1 instanceof $Empty && (false || true)) {
        let a = $.head;
        return a;
      }
    }
  }
}
