compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_building_record_matched_by_pattern.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "pub fn go(x) {\n   case x {\n     Ok(1) -> Ok(1)\n     Ok(n) -> Ok(n)\n     Error(_) -> Error(Nil)\n   }\n}"
---
----- SOURCE CODE
pub fn go(x) {
   case x {
     Ok(1) -> Ok(1)
     Ok(n) -> Ok(n)
     Error(_) -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import { Ok, Error } from "../gleam.mjs";

export function go(x) {
  if (x instanceof Ok) {
    if (x[0] === 1) {
      return x;
    } else {
      return x;
    }
  } else {
    return new Error(undefined);
  }
}
