compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_building_simple_value_matched_by_pattern.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "pub fn go(x) {\n   case x {\n     1 -> 2\n     n -> n\n   }\n}"
---
----- SOURCE CODE
pub fn go(x) {
   case x {
     1 -> 2
     n -> n
   }
}

----- COMPILED JAVASCRIPT
export function go(x) {
  if (x === 1) {
    return 2;
  } else {
    return x;
  }
}
